--- a/src/generate_plone_addon/template_theme/src/{{namespace}}/{{module}}/theme/scss/_custom.scss
+++ b/src/generate_plone_addon/template_theme/src/{{namespace}}/{{module}}/theme/scss/_custom.scss
@@ -37,6 +37,10 @@
         background-color: transparent !important;
         margin-left: auto;
       }
+
+      &.lead-img {
+        width: auto;
+      }
     }
   }
 }
