--- a/src/generate_plone_addon/template_theme/src/{{namespace}}/{{module}}/theme/scss/_variables.scss
+++ b/src/generate_plone_addon/template_theme/src/{{namespace}}/{{module}}/theme/scss/_variables.scss
@@ -1,3 +1,15 @@
 $primary: #4AC728;
 $secondary: #36941D;
 $tertiary: #1B470E;
+
+$info--dark: #054f31;
+$info: #12B76A;
+$info--light: #6CE9A6;
+
+$warning--dark: #7A2E0E;
+$warning: #F79009;
+$warning--light: #FEC84B;
+
+$danger--dark: #7A271A;
+$danger: #F04438;
+$danger--light: #FDA29B;
